# polymove

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppliedOffersPanel.tsx  Filters.tsx  FiltersBar.tsx  MetricsBlock.tsx  NewsList.tsx  NotificationPanel.tsx  OfferCard.tsx  ScoreBars.tsx  StudentLogin.tsx
frontend/src/lib/: offer-metrics.ts
frontend/src/pages/: OffersExplorer.tsx  StudentDashboard.tsx
frontend/src/types/: index.ts
proto/: mi8.proto
services/colporteur/: Cargo.toml  Dockerfile
services/colporteur/src/: main.rs
services/erasmumu/: Cargo.toml  Dockerfile
services/erasmumu/src/: main.rs
services/erasmumu/src/adapters/http/: mod.rs
services/erasmumu/src/adapters/persistence/mongo/: offer_repository.rs
services/erasmumu/src/application/: mod.rs  offer_service.rs
services/erasmumu/src/domain/: mod.rs  offer.rs
services/erasmumu/src/domain/ports/: mod.rs  offer_repository.rs
services/laposte/: Cargo.toml  Dockerfile
services/laposte/src/: main.rs
services/laposte/src/adapters/: mod.rs
services/laposte/src/adapters/amqp/: subscriber.rs
services/laposte/src/adapters/http/: mod.rs
services/laposte/src/adapters/persistence/mongo/: mod.rs  subscriber_repository.rs
services/laposte/src/application/: mod.rs  subscriber_service.rs
services/laposte/src/domain/: subscriber.rs
services/laposte/src/ports/: subscriber_repository.rs
services/mi8/: Cargo.toml  Dockerfile  build.rs
services/mi8/src/: lib.rs  main.rs
services/mi8/src/adapters/: mod.rs
services/mi8/src/adapters/amqp/: subscriber.rs
services/mi8/src/adapters/grpc/: server.rs
services/mi8/src/adapters/persistence/redis/: news_repository.rs
services/mi8/src/application/: news_service.rs
services/mi8/src/domain/: model.rs
services/mi8/src/domain/ports/: mod.rs  news_repository.rs
services/polytech/: Cargo.toml  Dockerfile  build.rs
services/polytech/migrations/: 20260212000000_create_students.sql  20260320000001_create_internships.sql  20260403000001_create_notifications.sql
services/polytech/src/: lib.rs  main.rs
services/polytech/src/adapters/: mod.rs
services/polytech/src/adapters/amqp/: publisher.rs  subscriber.rs
services/polytech/src/adapters/grpc/: mi8_client.rs  mod.rs
services/polytech/src/adapters/http/: erasmumu_client.rs  mod.rs  offers.rs
services/polytech/src/adapters/persistence/postgres/: internship_repository.rs  mod.rs  notification_repository.rs
services/polytech/src/application/: mod.rs  notification_service.rs  offer_aggregation_service.rs  student_service.rs
services/polytech/src/domain/: internship.rs  mod.rs  notification.rs  student.rs
services/polytech/src/ports/: erasmumu_client.rs  internship_repository.rs  mi8_client.rs  mod.rs  notification_repository.rs  student_repository.rs
services/seeder/: Cargo.toml  Dockerfile
services/seeder/data/: offers.json
services/seeder/src/: main.rs
