[package]
name = "laposte"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "laposte"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["trace", "cors"] }
thiserror = "2.0"
anyhow = "1.0"
futures = "0.3"
lapin = "2"
